--- a/index.html
+++ b/index.html
@@ -109,6 +109,43 @@
 </p>
 </div>
 </article>
+<article class=post-entry>
+<header class=entry-header>
+<h2># Go1.18 - 工作区模式
+</h2>
+</header>
+<div class=entry-content>
+<p>安装最新的Go1.18版本，它为你提供了工作区模式，帮助你轻松依赖本地类库。
+例如，你开发一个新项目，分了两个 go module，分别为 service-a 和 service-b，service-a 依赖了service-b ，现在项目还处于开发阶段，我们都是这么处理的。
+创建项目目录：
+mkdir service cd service 创建 service-b 模块:
+mkdir service-b cd service-b go mod init github.com/srcio/service-b 编写 service-b 模块代码：
+mkdir greeting vim greeting/hello.go package greeting import "fmt" func Hello(name string){ fmt.Println("Hello, " + name) } 继续创建 service-a 模块：
+cd .. mkdir service-a cd service-a go mod init github.com/srcio/service-a 因为 service-a 需要依赖本地开发的 service-b 类库，所以我们需要在 go.mod 中引入 service-a ：
+vim go.mod module github.com/srcio/service-a go 1....</p>
+</div>
+<footer class=entry-footer><span class=meta-item>
+<span>
+<i class="fa-solid fa-calendar-day"></i>&nbsp;
+2022-9-28
+</span>
+</span>&nbsp;·&nbsp;
+<span class=meta-item>
+<span>
+<i class="fa-solid fa-clock"></i>&nbsp;1 分钟</span>
+</span>&nbsp;·&nbsp;
+<span class=meta-item>
+<span>
+<i class="fa-solid fa-chart-simple"></i></i>&nbsp;165 字</span>
+</span>
+&nbsp;·&nbsp;
+<span class=meta-item>
+<span>
+<i class="fa-solid fa-user"></i></i>&nbsp;丁鹏
+</span>
+</span></footer>
+<a class=entry-link aria-label="post link to # Go1.18 - 工作区模式" href=https://blog.srcio.cn/series/programming-go/go-work/></a>
+</article>
 </main>
 <script async src=//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js></script>
 <footer class=footer>
