deploy: b69ec6b1b7f9893c3f05c12d334bf104afd02b72

--- a/series/programming-go/go-work/index.html
+++ b/series/programming-go/go-work/index.html
@@ -225,6 +225,13 @@ go work use service-d
 <ul class=post-tags>
 <li><a href=https://blog.srcio.cn/tags/golang/><i class="fa-solid fa-tag"></i>&nbsp;Golang</a></li>
 </ul>
+<nav class=paginav>
+<a class=next href=https://blog.srcio.cn/posts/use-giscus/>
+<strong class=title>下一页&nbsp;<i class="fa-solid fa-forward"></i></strong>
+<br>
+<span>使用 Giscus 作为博客评论系统</span>
+</a>
+</nav>
 </footer>
 <div class=giscus_comments><script src=https://giscus.app/client.js data-repo=srcio/blog data-repo-id=R_kgDOIFWX7A data-category=General data-category-id=DIC_kwDOIFWX7M4CRrSg data-mapping=pathname data-strict=0 data-reactions-enabled=1 data-emit-metadata=0 data-input-position=top data-theme=light data-lang=zh-CN crossorigin=anonymous async></script>
 </div>
