--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<!doctype html><html lang=zh dir=" auto">
+<!doctype html><html lang=zh dir=auto>
 <head>
 <meta name=generator content="Hugo 0.91.2">
-<link rel=stylesheet href=/fontawesome/css/all.min.css crossorigin=anonymous><meta charset=utf-8>
+<link rel=stylesheet href=/fontawesome/css/all.min.css crossorigin=anonymous>
+</head><meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
 <title>博客</title>
 <meta name=keywords content="Blog,Portfolio">
 <meta name=description content="博客 · 丁鹏">
+`
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://blog.srcio.cn/>
 <meta name=google-site-verification content="XYZabc">
@@ -37,8 +39,7 @@
 <meta name=twitter:description content="博客 · 丁鹏">
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"博客","url":"https://blog.srcio.cn/","description":"博客 · 丁鹏","thumbnailUrl":"https://blog.srcio.cn/images/blog.png","sameAs":["https://github.com/srcio","mailto:me@srcio.cn"]}</script>
 </head>
-<body class=list id="
-    top">
+<body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
 <header class=header>
 <nav class=nav>
@@ -115,14 +116,13 @@
 </h2>
 </header>
 <div class=entry-content>
-<p>安装最新的Go1.18版本，它为你提供了工作区模式，帮助你轻松依赖本地类库。
+<p>安装的 Go1.18 或更新版本，它为你提供了工作区模式（Workspace mode），帮助你更好做 go 模块之间依赖的管理。
 例如，你开发一个新项目，分了两个 go module，分别为 service-a 和 service-b，service-a 依赖了service-b ，现在项目还处于开发阶段，我们都是这么处理的。
 创建项目目录：
 mkdir service cd service 创建 service-b 模块:
 mkdir service-b cd service-b go mod init github.com/srcio/service-b 编写 service-b 模块代码：
 mkdir greeting vim greeting/hello.go package greeting import "fmt" func Hello(name string){ fmt.Println("Hello, " + name) } 继续创建 service-a 模块：
-cd .. mkdir service-a cd service-a go mod init github.com/srcio/service-a 因为 service-a 需要依赖本地开发的 service-b 类库，所以我们需要在 go.mod 中引入 service-a ：
-vim go.mod module github.com/srcio/service-a go 1....</p>
+cd .. mkdir service-a cd service-a go mod init github.com/srcio/service-a 因为 service-a 需要依赖本地开发的 service-b 类库，所以我们需要在 go.mod 中引入 service-a ：...</p>
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
@@ -136,7 +136,7 @@ vim go.mod module github.com/srcio/service-a go 1....</p>
 </span>&nbsp;·&nbsp;
 <span class=meta-item>
 <span>
-<i class="fa-solid fa-chart-simple"></i></i>&nbsp;165 字</span>
+<i class="fa-solid fa-chart-simple"></i></i>&nbsp;170 字</span>
 </span>
 &nbsp;·&nbsp;
 <span class=meta-item>
