--- a/series/programming-kubernetes/index.html
+++ b/series/programming-kubernetes/index.html
@@ -1,12 +1,14 @@
-<!doctype html><html lang=zh dir=" auto">
+<!doctype html><html lang=zh dir=auto>
 <head>
-<link rel=stylesheet href=/fontawesome/css/all.min.css crossorigin=anonymous><meta charset=utf-8>
+<link rel=stylesheet href=/fontawesome/css/all.min.css crossorigin=anonymous>
+</head><meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
 <title>Kubernetes 编程 | 博客</title>
 <meta name=keywords content>
 <meta name=description content="Kubernetes 编程 - 博客">
+`
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://blog.srcio.cn/series/programming-kubernetes/>
 <meta name=google-site-verification content="XYZabc">
@@ -35,8 +37,7 @@
 <meta name=twitter:description content="博客 · 丁鹏">
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"系列","item":"https://blog.srcio.cn/series/"},{"@type":"ListItem","position":2,"name":"Kubernetes 编程","item":"https://blog.srcio.cn/series/programming-kubernetes/"}]}</script>
 </head>
-<body class=list id="
-    top">
+<body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
 <header class=header>
 <nav class=nav>
