deploy: 1085c71ac0f4a4dccc44cca6e4902e496d5cd9f9

--- a/series/programming-go/index.html
+++ b/series/programming-go/index.html
@@ -1,20 +1,18 @@
 <!doctype html><html lang=zh dir=auto>
 <head>
-<link rel=stylesheet href=/fontawesome/css/all.min.css crossorigin=anonymous>
-</head><meta charset=utf-8>
+<link rel=stylesheet href=/fontawesome/css/all.min.css crossorigin=anonymous><meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
 <title>Golang 编程 | 博客</title>
 <meta name=keywords content>
 <meta name=description content="Golang 编程 - 博客">
-`
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://blog.srcio.cn/series/programming-go/>
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/assets/css/stylesheet.749babd10a1bb02f4d49b97f7453ffb5f3d413e906c29237cfbd722ed89c91a7.css integrity="sha256-dJur0QobsC9NSbl/dFP/tfPUE+kGwpI3z71yLtickac=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.1bcd07bacd60b763bdc20eea4a7f7b6569435de2c0861c802b4e59555525dd0c.css integrity="sha256-G80Hus1gt2O9wg7qSn97ZWlDXeLAhhyAK05ZVVUl3Qw=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=32x32 href=https://blog.srcio.cn/images/blog.png>
@@ -53,43 +51,37 @@
 <li>
 <a href=https://blog.srcio.cn/ title=主页>
 <span>
-<i class="fa-solid fa-home"></i>
-主页</span>
+<i class="fa-solid fa-home"></i>主页</span>
 </a>
 </li>
 <li>
 <a href=https://blog.srcio.cn/posts/ title=文章>
 <span>
-<i class="fa-solid fa-feather"></i>
-文章</span>
+<i class="fa-solid fa-feather"></i>文章</span>
 </a>
 </li>
 <li>
 <a href=https://blog.srcio.cn/series/ title=系列>
 <span>
-<i class="fa-solid fa-swatchbook"></i>
-系列</span>
+<i class="fa-solid fa-swatchbook"></i>系列</span>
 </a>
 </li>
 <li>
 <a href=https://blog.srcio.cn/tags/ title=标签>
 <span>
-<i class="fa-solid fa-tags"></i>
-标签</span>
+<i class="fa-solid fa-tags"></i>标签</span>
 </a>
 </li>
 <li>
 <a href=https://blog.srcio.cn/archives/ title=归档>
 <span>
-<i class="fa-solid fa-folder-minus"></i>
-归档</span>
+<i class="fa-solid fa-folder-minus"></i>归档</span>
 </a>
 </li>
 <li>
-<a href=https://blog.srcio.cn/search/ title=" (Alt + /)" accesskey=/>
+<a href=https://blog.srcio.cn/search/ title>
 <span>
-<i class="fa-solid fa-magnifying-glass"></i>
-</span>
+<i class="fa-solid fa-magnifying-glass"></i></span>
 </a>
 </li>
 </ul>
@@ -138,11 +130,10 @@ cd .. mkdir service-a cd service-a go mod init github.com/srcio/service-a 因为
 </main>
 <script async src=//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js></script>
 <footer class=footer>
-<span>&copy; 2022 博客 · 丁鹏</span>
+<span>&copy; 2022 <a href=https://blog.srcio.cn/>博客 · 丁鹏</a></span>
 <span><a href=https://beian.miit.gov.cn/>湘ICP备2022019990号</a></span>
 <span>
-📈 本站共计<span id=busuanzi_value_site_pv style=color:#87cefa>0</span>次访问
-<span id=busuanzi_value_site_uv style=color:#87cefa>0</span>位访客
+📈 本站共计：<a id=busuanzi_value_site_pv>0</a> 次访问 & <a id=busuanzi_value_site_uv>0</a> 位访客
 </span>
 </footer>
 <a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
