--- a/series/programming-go/go-work/index.html
+++ b/series/programming-go/go-work/index.html
@@ -1,7 +1,6 @@
 <!doctype html><html lang=zh dir=auto>
 <head>
-<link rel=stylesheet href=/fontawesome/css/all.min.css crossorigin=anonymous>
-</head><meta charset=utf-8>
+<link rel=stylesheet href=/fontawesome/css/all.min.css crossorigin=anonymous><meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
@@ -14,13 +13,12 @@ mkdir service cd service 创建 service-b 模块:
 mkdir service-b cd service-b go mod init github.com/srcio/service-b 编写 service-b 模块代码：
 mkdir greeting vim greeting/hello.go package greeting import &#34;fmt&#34; func Hello(name string){ fmt.Println(&#34;Hello, &#34; + name) } 继续创建 service-a 模块：
 cd .. mkdir service-a cd service-a go mod init github.com/srcio/service-a 因为 service-a 需要依赖本地开发的 service-b 类库，所以我们需要在 go.mod 中引入 service-a ：">
-`
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://blog.srcio.cn/series/programming-go/go-work/>
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/assets/css/stylesheet.749babd10a1bb02f4d49b97f7453ffb5f3d413e906c29237cfbd722ed89c91a7.css integrity="sha256-dJur0QobsC9NSbl/dFP/tfPUE+kGwpI3z71yLtickac=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.1bcd07bacd60b763bdc20eea4a7f7b6569435de2c0861c802b4e59555525dd0c.css integrity="sha256-G80Hus1gt2O9wg7qSn97ZWlDXeLAhhyAK05ZVVUl3Qw=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://blog.srcio.cn/images/blog.png>
@@ -74,43 +72,37 @@ cd .. mkdir service-a cd service-a go mod init github.com/srcio/service-a 因为
 <li>
 <a href=https://blog.srcio.cn/ title=主页>
 <span>
-<i class="fa-solid fa-home"></i>
-主页</span>
+<i class="fa-solid fa-home"></i>主页</span>
 </a>
 </li>
 <li>
 <a href=https://blog.srcio.cn/posts/ title=文章>
 <span>
-<i class="fa-solid fa-feather"></i>
-文章</span>
+<i class="fa-solid fa-feather"></i>文章</span>
 </a>
 </li>
 <li>
 <a href=https://blog.srcio.cn/series/ title=系列>
 <span>
-<i class="fa-solid fa-swatchbook"></i>
-系列</span>
+<i class="fa-solid fa-swatchbook"></i>系列</span>
 </a>
 </li>
 <li>
 <a href=https://blog.srcio.cn/tags/ title=标签>
 <span>
-<i class="fa-solid fa-tags"></i>
-标签</span>
+<i class="fa-solid fa-tags"></i>标签</span>
 </a>
 </li>
 <li>
 <a href=https://blog.srcio.cn/archives/ title=归档>
 <span>
-<i class="fa-solid fa-folder-minus"></i>
-归档</span>
+<i class="fa-solid fa-folder-minus"></i>归档</span>
 </a>
 </li>
 <li>
-<a href=https://blog.srcio.cn/search/ title=" (Alt + /)" accesskey=/>
+<a href=https://blog.srcio.cn/search/ title>
 <span>
-<i class="fa-solid fa-magnifying-glass"></i>
-</span>
+<i class="fa-solid fa-magnifying-glass"></i></span>
 </a>
 </li>
 </ul>
@@ -226,9 +218,7 @@ go work use service-d
 <nav class=paginav>
 <a class=next href=https://blog.srcio.cn/posts/use-giscus/>
 <strong class=title>下一页&nbsp;<i class="fa-solid fa-forward"></i></strong>
-<br>
-<span>使用 Giscus 作为博客评论系统</span>
-</a>
+<br>使用 Giscus 作为博客评论系统</a>
 </nav>
 </footer>
 <div class=giscus_comments><script src=https://giscus.app/client.js data-repo=srcio/blog data-repo-id=R_kgDOIFWX7A data-category=General data-category-id=DIC_kwDOIFWX7M4CRrSg data-mapping=pathname data-strict=0 data-reactions-enabled=1 data-emit-metadata=0 data-input-position=top data-theme=light data-lang=zh-CN crossorigin=anonymous async></script>
@@ -238,11 +228,10 @@ go work use service-d
 </main>
 <script async src=//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js></script>
 <footer class=footer>
-<span>&copy; 2022 博客 · 丁鹏</span>
+<span>&copy; 2022 <a href=https://blog.srcio.cn/>博客 · 丁鹏</a></span>
 <span><a href=https://beian.miit.gov.cn/>湘ICP备2022019990号</a></span>
 <span>
-📈 本站共计<span id=busuanzi_value_site_pv style=color:#87cefa>0</span>次访问
-<span id=busuanzi_value_site_uv style=color:#87cefa>0</span>位访客
+📈 本站共计：<a id=busuanzi_value_site_pv>0</a> 次访问 & <a id=busuanzi_value_site_uv>0</a> 位访客
 </span>
 </footer>
 <a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
