--- a/series/programming-go/go-work/index.html
+++ b/series/programming-go/go-work/index.html
@@ -18,7 +18,7 @@ cd .. mkdir service-a cd service-a go mod init github.com/srcio/service-a 因为
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/assets/css/stylesheet.0a92f0df58a864364bb995b1dc843a8a4499b5ffff7c5f5b1d554a83adf23623.css integrity="sha256-CpLw31ioZDZLuZWx3IQ6ikSZtf//fF9bHVVKg63yNiM=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.afa6f22f54ae46ee9cf2eed91ddbb59f243b98c199b5cd2dec1c6fce5ca6f032.css integrity="sha256-r6byL1SuRu6c8u7ZHdu1nyQ7mMGZtc0t7Bxvzlym8DI=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://blog.srcio.cn/images/blog.png>
@@ -110,9 +110,9 @@ cd .. mkdir service-a cd service-a go mod init github.com/srcio/service-a 因为
 </header><main class=main>
 <article class=post-single>
 <header class=post-header>
-<div class=breadcrumbs><a href=/>主页&nbsp;</a><i class="fa-solid fa-angle-right"></i>
-<a href=https://blog.srcio.cn/series/>&nbsp;系列&nbsp;</a><i class="fa-solid fa-angle-right"></i>
-<a href=https://blog.srcio.cn/series/programming-go/>&nbsp;Golang 编程&nbsp;</a><i class="fa-solid fa-angle-right"></i><span>&nbsp;Go1.18 - 工作区模式</span>
+<div class=breadcrumbs><p><a href=/>主页</a>
+<a href=https://blog.srcio.cn/series/><i class="fa-solid fa-angle-right"></i>&nbsp;系列</a>
+<a href=https://blog.srcio.cn/series/programming-go/><i class="fa-solid fa-angle-right"></i>&nbsp;Golang 编程</a>&nbsp;<span><i class="fa-solid fa-angle-right"></i>&nbsp;Go1.18 - 工作区模式</span></p>
 </div>
 <h1 class=post-title>
 Go1.18 - 工作区模式
@@ -122,19 +122,19 @@ Go1.18 - 工作区模式
 <i class="fa-solid fa-calendar-day"></i>&nbsp;
 2022-9-28
 </span>
-</span>&nbsp;·&nbsp;<span class=meta-item>
+</span><span class=meta-item>
 <span>
-&nbsp;<i class="fa-solid fa-clock"></i>&nbsp;1 分钟</span>
-</span>&nbsp;·&nbsp;<span class=meta-item>
+&nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-clock"></i>&nbsp;1 分钟</span>
+</span><span class=meta-item>
 <span>
-&nbsp;<i class="fa-solid fa-chart-simple"></i></i>&nbsp;170 字</span>
+&nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-chart-simple"></i></i>&nbsp;170 字</span>
 </span>
-&nbsp;·&nbsp;<span class=meta-item>
+<span class=meta-item>
 <span>
-&nbsp;<i class="fa-solid fa-user"></i></i>&nbsp;丁鹏
+&nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-user"></i></i>&nbsp;丁鹏
 </span>
-</span>&nbsp;·&nbsp;<span class=meta-item>
-&nbsp;<i class="fa-solid fa-book-open-reader"></i>&nbsp;<span id=busuanzi_value_page_pv></span>
+</span><span class=meta-item>
+&nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-book-open-reader"></i>&nbsp;<span id=busuanzi_value_page_pv></span>
 </span>&nbsp;&nbsp;|&nbsp;&nbsp;<a href=https://github.com/srcio/blog/edit/master/content/series/programming-go/go-work.md rel="noopener noreferrer" target=_blank>
 <i class="fa-regular fa-pen-to-square"></i>&nbsp;编辑</a>
 </div>
