--- a/series/index.html
+++ b/series/index.html
@@ -12,7 +12,7 @@
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/assets/css/stylesheet.afa6f22f54ae46ee9cf2eed91ddbb59f243b98c199b5cd2dec1c6fce5ca6f032.css integrity="sha256-r6byL1SuRu6c8u7ZHdu1nyQ7mMGZtc0t7Bxvzlym8DI=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.5b2f919107773599e9bd959f212a8c2da6a85ee8f9e6d6446d23e214f7dd8338.css integrity="sha256-Wy+RkQd3NZnpvZWfISqMLaaoXuj55tZEbSPiFPfdgzg=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=32x32 href=https://blog.srcio.cn/images/blog.png>
@@ -100,7 +100,7 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fa-solid fa-calendar-day"></i>&nbsp;
+<i class="fa-solid fa-calendar-day"></i>
 2022-9-28
 </span>
 </span>
@@ -121,7 +121,7 @@
 </div>
 <footer class=entry-footer><span class=meta-item>
 <span>
-<i class="fa-solid fa-calendar-day"></i>&nbsp;
+<i class="fa-solid fa-calendar-day"></i>
 2022-9-28
 </span>
 </span>
