deploy: a80815e4d6a0f4360dbf2f795d425ddfe9bde871

--- a/series/programming-go/go-work/index.html
+++ b/series/programming-go/go-work/index.html
@@ -18,7 +18,7 @@ cd .. mkdir service-a cd service-a go mod init github.com/srcio/service-a 因为
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/assets/css/stylesheet.5b2f919107773599e9bd959f212a8c2da6a85ee8f9e6d6446d23e214f7dd8338.css integrity="sha256-Wy+RkQd3NZnpvZWfISqMLaaoXuj55tZEbSPiFPfdgzg=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.acef08f41736d9c51a13f4a61106e4430c295f4d7449d29ad48e3df7b6975107.css integrity="sha256-rO8I9Bc22cUaE/SmEQbkQwwpX010SdKa1I4997aXUQc=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://blog.srcio.cn/images/blog.png>
@@ -213,6 +213,9 @@ go work use service-d
 <li><a href=https://blog.srcio.cn/tags/golang/><i class="fa-solid fa-tag"></i>&nbsp;Golang</a></li>
 </ul>
 <nav class=paginav>
+<a class=prev href=https://blog.srcio.cn/series/programming-kubernetes/rest-config/>
+<strong class=title><i class="fa-solid fa-backward"></i>&nbsp;上一页</strong>
+<br>构造 rest.Config 实例</a>
 <a class=next href=https://blog.srcio.cn/posts/use-giscus/>
 <strong class=title>下一页&nbsp;<i class="fa-solid fa-forward"></i></strong>
 <br>使用 Giscus 作为博客评论系统</a>
