deploy: ff078baae10f9cd41ffd9d5c98636712c85765c1

--- a/series/programming-kubernetes/index.html
+++ b/series/programming-kubernetes/index.html
@@ -134,7 +134,7 @@ GVR
 </article>
 <article class=post-entry>
 <header class=entry-header>
-<h2>Kuberentes Operator"
+<h2>Kuberentes Operator
 </h2>
 </header>
 <div class=entry-content>
@@ -157,7 +157,7 @@ GVR
 &nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-user"></i></i>&nbsp;丁鹏
 </span>
 </span></footer>
-<a class=entry-link aria-label='post link to Kuberentes Operator"' href=https://blog.srcio.cn/series/programming-kubernetes/operator/></a>
+<a class=entry-link aria-label="post link to Kuberentes Operator" href=https://blog.srcio.cn/series/programming-kubernetes/operator/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
