--- a/series/programming-kubernetes/kube-client/index.html
+++ b/series/programming-kubernetes/kube-client/index.html
@@ -128,7 +128,7 @@ foobar
 <nav class=paginav>
 <a class=prev href=https://blog.srcio.cn/series/programming-kubernetes/operator/>
 <strong class=title><i class="fa-solid fa-backward"></i>&nbsp;上一页</strong>
-<br>Kuberentes Operator"</a>
+<br>Kuberentes Operator</a>
 <a class=next href=https://blog.srcio.cn/series/programming-kubernetes/rest-config/>
 <strong class=title>下一页&nbsp;<i class="fa-solid fa-forward"></i></strong>
 <br>构造 rest.Config 实例</a>
