--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ GVR
 </article>
 <article class=post-entry>
 <header class=entry-header>
-<h2>Kuberentes Operator"
+<h2>Kuberentes Operator
 </h2>
 </header>
 <div class=entry-content>
@@ -206,7 +206,7 @@ GVR
 &nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-user"></i></i>&nbsp;丁鹏
 </span>
 </span></footer>
-<a class=entry-link aria-label='post link to Kuberentes Operator"' href=https://blog.srcio.cn/series/programming-kubernetes/operator/></a>
+<a class=entry-link aria-label="post link to Kuberentes Operator" href=https://blog.srcio.cn/series/programming-kubernetes/operator/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
