--- a/series/programming-kubernetes/api-design/index.html
+++ b/series/programming-kubernetes/api-design/index.html
@@ -218,7 +218,7 @@ Kubernetes API 设计
 <br>Golang 实现双向认证</a>
 <a class=next href=https://blog.srcio.cn/series/programming-kubernetes/operator/>
 <strong class=title>下一页&nbsp;<i class="fa-solid fa-forward"></i></strong>
-<br>Kuberentes Operator"</a>
+<br>Kuberentes Operator</a>
 </nav>
 </footer>
 <div class=giscus_comments><script src=https://giscus.app/client.js data-repo=srcio/blog data-repo-id=R_kgDOIFWX7A data-category=General data-category-id=DIC_kwDOIFWX7M4CRrSg data-mapping=pathname data-strict=0 data-reactions-enabled=1 data-emit-metadata=0 data-input-position=top data-theme=light data-lang=zh-CN crossorigin=anonymous async></script>
