--- a/series/programming-kubernetes/api-design/index.html
+++ b/series/programming-kubernetes/api-design/index.html
@@ -26,7 +26,7 @@ GVR
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/assets/css/stylesheet.acef08f41736d9c51a13f4a61106e4430c295f4d7449d29ad48e3df7b6975107.css integrity="sha256-rO8I9Bc22cUaE/SmEQbkQwwpX010SdKa1I4997aXUQc=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.3d4f89feedcdef574ababcd3bae880bb5402eab679fb6ee113c9fcf5dee8e959.css integrity="sha256-PU+J/u3N71dKurzTuuiAu1QC6rZ5+27hE8n89d7o6Vk=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://blog.srcio.cn/images/blog.png>
@@ -213,9 +213,9 @@ Kubernetes API 设计
 <li><a href=https://blog.srcio.cn/tags/kubernetes/><i class="fa-solid fa-tag"></i>&nbsp;Kubernetes</a></li>
 </ul>
 <nav class=paginav>
-<a class=prev href=https://blog.srcio.cn/series/programming-go/mtls/>
+<a class=prev href=https://blog.srcio.cn/series/programming-kubernetes/kube-client/>
 <strong class=title><i class="fa-solid fa-backward"></i>&nbsp;上一页</strong>
-<br>Golang 实现双向认证</a>
+<br>构造 Kubernetes 客户端实例</a>
 <a class=next href=https://blog.srcio.cn/series/programming-kubernetes/operator/>
 <strong class=title>下一页&nbsp;<i class="fa-solid fa-forward"></i></strong>
 <br>Kuberentes Operator</a>
