--- a/series/programming-go/gen-cert/index.html
+++ b/series/programming-go/gen-cert/index.html
@@ -12,7 +12,7 @@
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/assets/css/stylesheet.3d4f89feedcdef574ababcd3bae880bb5402eab679fb6ee113c9fcf5dee8e959.css integrity="sha256-PU+J/u3N71dKurzTuuiAu1QC6rZ5+27hE8n89d7o6Vk=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.f6aa4c86852eacc22466a6e0435dc0f355c21ffabe012b3dbc334c087707b373.css integrity="sha256-9qpMhoUurMIkZqbgQ13A81XCH/q+ASs9vDNMCHcHs3M=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://blog.srcio.cn/images/blog.png>
@@ -319,6 +319,9 @@ Golang 生成证书
 <li><a href=https://blog.srcio.cn/tags/golang/><i class="fa-solid fa-tag"></i>&nbsp;Golang</a></li>
 </ul>
 <nav class=paginav>
+<a class=prev href=https://blog.srcio.cn/posts/docker-compose/>
+<strong class=title><i class="fa-solid fa-backward"></i>&nbsp;上一页</strong>
+<br>Docker Compose 实践</a>
 <a class=next href=https://blog.srcio.cn/series/programming-go/mtls/>
 <strong class=title>下一页&nbsp;<i class="fa-solid fa-forward"></i></strong>
 <br>Golang 实现双向认证</a>
