--- a/series/programming-kubernetes/index.html
+++ b/series/programming-kubernetes/index.html
@@ -12,7 +12,7 @@
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/assets/css/stylesheet.3d4f89feedcdef574ababcd3bae880bb5402eab679fb6ee113c9fcf5dee8e959.css integrity="sha256-PU+J/u3N71dKurzTuuiAu1QC6rZ5+27hE8n89d7o6Vk=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.f6aa4c86852eacc22466a6e0435dc0f355c21ffabe012b3dbc334c087707b373.css integrity="sha256-9qpMhoUurMIkZqbgQ13A81XCH/q+ASs9vDNMCHcHs3M=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=32x32 href=https://blog.srcio.cn/images/blog.png>
@@ -91,6 +91,34 @@
 <a href=https://blog.srcio.cn/series/><i class="fa-solid fa-angle-right"></i>&nbsp;系列</a>&nbsp;<span><i class="fa-solid fa-angle-right"></i>&nbsp;Kubernetes 编程</span></p>
 </div>
 </header>
+<article class=post-entry>
+<header class=entry-header>
+<h2>CRD 简介
+</h2>
+</header>
+<div class=entry-content>
+<p>CRD 字段校验配置
+apiVersion:apiextensions.k8s.io/v1beta1kind:CustomResourceDefinitionmetadata:name:scalings.control.srcio.iospec:group:control.srcio.ioversions:- name:v1served:truestorage:truescope:Namespacednames:plural:scalingssingular:scalingkind:Scalingvalidation:openAPIV3Schema:properties:spec:required:- targetDeployment- minReplicas- maxReplicas- metricType- step- scaleUp- scaleDownproperties:targetDeployment:type:stringminReplicas:type:integerminimum:0maxReplicas:type:integerminimum:0metricType:type:stringenum:- CPU- MEMORY- REQUESTSstep:type:integerminimum:1scaleUp:type:integerscaleDown:type:integerminimum:0 是否必须 参数类型 枚举范围 数值最大最小 </p>
+</div>
+<footer class=entry-footer><span class=meta-item>
+<span>
+<i class="fa-solid fa-calendar-day"></i>
+2022-10-11
+</span>
+</span><span class=meta-item>
+<span>
+&nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-clock"></i>&nbsp;1 分钟</span>
+</span><span class=meta-item>
+<span>
+&nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-chart-simple"></i></i>&nbsp;18 字</span>
+</span>
+<span class=meta-item>
+<span>
+&nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-user"></i></i>&nbsp;丁鹏
+</span>
+</span></footer>
+<a class=entry-link aria-label="post link to CRD 简介" href=https://blog.srcio.cn/series/programming-kubernetes/crd/></a>
+</article>
 <article class=post-entry>
 <header class=entry-header>
 <h2>构造 rest.Config 实例
