deploy: 9b3dc00128de1348fe00d072c6887e00fd4f779d

--- a/series/programming-go/index.html
+++ b/series/programming-go/index.html
@@ -12,7 +12,7 @@
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/assets/css/stylesheet.f6aa4c86852eacc22466a6e0435dc0f355c21ffabe012b3dbc334c087707b373.css integrity="sha256-9qpMhoUurMIkZqbgQ13A81XCH/q+ASs9vDNMCHcHs3M=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.286be1a589d50517ba1646c90dc5bf8e27516f8b1ac6a0daa28e56593bf6d0d1.css integrity="sha256-KGvhpYnVBRe6FkbJDcW/jidRb4saxqDaoo5WWTv20NE=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=32x32 href=https://blog.srcio.cn/images/blog.png>
@@ -220,11 +220,13 @@ cd .. mkdir service-a cd service-a go mod init github.com/srcio/service-a 因为
 </main>
 <script async src=//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js></script>
 <footer class=footer>
-<span>&copy; 2022 <a href=https://blog.srcio.cn/>博客 · 丁鹏</a></span>
+<p>
+<span>&copy;2022 <a href=https://blog.srcio.cn/>博客 · 丁鹏</a></span>
+&nbsp;|&nbsp;
 <span><a href=https://beian.miit.gov.cn/>湘ICP备2022019990号</a></span>
-<span>
-📈 本站共计：<a id=busuanzi_value_site_pv>0</a> 次访问 & <a id=busuanzi_value_site_uv>0</a> 位访客
-</span>
+&nbsp;|&nbsp;
+<span>本站共计 <a id=busuanzi_value_site_pv>0</a> 次访问 & <a id=busuanzi_value_site_uv>0</a> 位访客</span>
+</p>
 </footer>
 <a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
 </a>
