--- a/series/programming-go/go-work/index.html
+++ b/series/programming-go/go-work/index.html
@@ -12,7 +12,7 @@
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/assets/css/stylesheet.f6aa4c86852eacc22466a6e0435dc0f355c21ffabe012b3dbc334c087707b373.css integrity="sha256-9qpMhoUurMIkZqbgQ13A81XCH/q+ASs9vDNMCHcHs3M=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.286be1a589d50517ba1646c90dc5bf8e27516f8b1ac6a0daa28e56593bf6d0d1.css integrity="sha256-KGvhpYnVBRe6FkbJDcW/jidRb4saxqDaoo5WWTv20NE=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://blog.srcio.cn/images/blog.png>
@@ -91,6 +91,7 @@
 </nav>
 </header><main class=main>
 <article class=post-single>
+<div class=post-left-article>
 <header class=post-header>
 <div class=breadcrumbs><p><a href=/>主页</a>
 <a href=https://blog.srcio.cn/series/><i class="fa-solid fa-angle-right"></i>&nbsp;系列</a>
@@ -209,15 +210,39 @@ go work use service-d
 <div class=giscus_comments><script src=https://giscus.app/client.js data-repo=srcio/blog data-repo-id=R_kgDOIFWX7A data-category=General data-category-id=DIC_kwDOIFWX7M4CRrSg data-mapping=pathname data-strict=0 data-reactions-enabled=1 data-emit-metadata=0 data-input-position=top data-theme=light data-lang=zh-CN crossorigin=anonymous async></script>
 </div>
 <script>document.querySelector("div.giscus_comments > script").setAttribute("data-theme",localStorage.getItem("pref-theme")?localStorage.getItem("pref-theme"):window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"),document.querySelector("#theme-toggle").addEventListener("click",()=>{let a=document.querySelector("iframe.giscus-frame");a&&a.contentWindow.postMessage({giscus:{setConfig:{theme:localStorage.getItem("pref-theme")?localStorage.getItem("pref-theme")==="dark"?"light":"dark":document.body.className.includes("dark")?"light":"dark"}}},"https://giscus.app")})</script>
+</div>
+<div class=post-right-tags><div class=panel>
+<div>
+<p class=panel-title><i class="fa-solid fa-tags"></i>&nbsp; 标签</p>
+<div class=inner>
+<ul>
+<li><a href=https://blog.srcio.cn/tags/golang/>Golang</a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class=post-right-toc>
+<div class=panel>
+<div>
+<p class=panel-title><i class="fa-solid fa-bookmark"></i>&nbsp; 目录</p>
+<div class=inner><nav id=TableOfContents></nav>
+</div>
+</div>
+</div>
+</div>
+<div class=clear_float></div>
 </article>
 </main>
 <script async src=//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js></script>
 <footer class=footer>
-<span>&copy; 2022 <a href=https://blog.srcio.cn/>博客 · 丁鹏</a></span>
+<p>
+<span>&copy;2022 <a href=https://blog.srcio.cn/>博客 · 丁鹏</a></span>
+&nbsp;|&nbsp;
 <span><a href=https://beian.miit.gov.cn/>湘ICP备2022019990号</a></span>
-<span>
-📈 本站共计：<a id=busuanzi_value_site_pv>0</a> 次访问 & <a id=busuanzi_value_site_uv>0</a> 位访客
-</span>
+&nbsp;|&nbsp;
+<span>本站共计 <a id=busuanzi_value_site_pv>0</a> 次访问 & <a id=busuanzi_value_site_uv>0</a> 位访客</span>
+</p>
 </footer>
 <a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
 </a>
