--- a/series/programming-kubernetes/crd/index.html
+++ b/series/programming-kubernetes/crd/index.html
@@ -12,7 +12,7 @@
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/assets/css/stylesheet.54adc4b6d3618c582f558445199b9c527be92a37fc366e8b9e4fd00dcc85ca75.css integrity="sha256-VK3EttNhjFgvVYRFGZucUnvpKjf8Nm6Lnk/QDcyFynU=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.f2c491fce8afa534511b126489022586d3e16bd60074f513e4d5393675d21445.css integrity="sha256-8sSR/OivpTRRGxJkiQIlhtPha9YAdPUT5NU5NnXSFEU=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://blog.srcio.cn/images/blog.png>
@@ -200,57 +200,27 @@ Kubernetes CRD 简介
 </div>
 <script>document.querySelector("div.giscus_comments > script").setAttribute("data-theme",localStorage.getItem("pref-theme")?localStorage.getItem("pref-theme"):window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"),document.querySelector("#theme-toggle").addEventListener("click",()=>{let a=document.querySelector("iframe.giscus-frame");a&&a.contentWindow.postMessage({giscus:{setConfig:{theme:localStorage.getItem("pref-theme")?localStorage.getItem("pref-theme")==="dark"?"light":"dark":document.body.className.includes("dark")?"light":"dark"}}},"https://giscus.app")})</script>
 </div>
-<div class=post-right-tags><div class=panel>
-<div>
-<p class=panel-title><i class="fa-solid fa-tags"></i>&nbsp; 标签</p>
-<div class=inner>
-<ul>
-<li><a href=https://blog.srcio.cn/tags/kubernetes/>Kubernetes</a></li>
-<li><a href=https://blog.srcio.cn/tags/crd/>crd</a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
 <div class=post-right-toc>
-<div class=panel>
-<div>
-<p class=panel-title><i class="fa-solid fa-bookmark"></i>&nbsp; 目录</p>
-<div class=inner><nav id=TableOfContents></nav>
-</div>
-</div>
-</div>
 </div>
 <div class=clear_float></div>
 </article>
 </main>
 <script async src=//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js></script>
 <footer class=footer>
-<div class=footer-left style=float:left>
-<p>
 🔥
 <span>2016 - 2022
 <a href=https://blog.srcio.cn/>博客 · 丁鹏</a>
 </span>
 &nbsp;|&nbsp;
+🇨🇳
 <span>
 <a href=https://beian.miit.gov.cn/>湘ICP备2022019990号</a>
+&nbsp;|&nbsp;
 </span>
-</p>
-</div>
-<div class=footer-middle>
-<p>
-🚩
-<span>集中起来的意志可以击穿顽石</span>
-</p>
-</div>
-<div class=footer-right>
-<p>
 📈
-<span>本站共计 <a id=busuanzi_value_site_pv>0</a> 次访问 & <a id=busuanzi_value_site_uv>0</a> 位访客</span>
-<p>
-</div>
-<div class=clear_float></div>
+<span>本站共计
+<a id=busuanzi_value_site_pv>0</a> 次访问 & <a id=busuanzi_value_site_uv>0</a> 位访客
+</span>
 </footer>
 <a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
 </a>
