deploy: 2332a2b904509da174ac6802dad8a453a1ee1a54

--- a/search/index.html
+++ b/search/index.html
@@ -9,9 +9,7 @@
 <meta name=description content="search">
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://blog.srcio.cn/search/>
-<meta name=google-site-verification content="XYZabc">
-<meta name=yandex-verification content="XYZabc">
-<meta name=msvalidate.01 content="XYZabc">
+<meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
 <link crossorigin=anonymous href=/assets/css/stylesheet.f2c491fce8afa534511b126489022586d3e16bd60074f513e4d5393675d21445.css integrity="sha256-8sSR/OivpTRRGxJkiQIlhtPha9YAdPUT5NU5NnXSFEU=" rel="preload stylesheet" as=style><link crossorigin=anonymous rel=preload as=fetch href=../index.json>
 <script defer crossorigin=anonymous src=/assets/js/search.113466315efbfa36b509890a2b12a73983a4a8b56c2a8f5573bec5a7200948a1.js integrity="sha256-ETRmMV77+ja1CYkKKxKnOYOkqLVsKo9Vc77FpyAJSKE="></script>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
