--- a/series/programming-go/go-work/index.html
+++ b/series/programming-go/go-work/index.html
@@ -9,9 +9,7 @@
 <meta name=description content="Go1.18 - 工作区模式">
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://blog.srcio.cn/series/programming-go/go-work/>
-<meta name=google-site-verification content="XYZabc">
-<meta name=yandex-verification content="XYZabc">
-<meta name=msvalidate.01 content="XYZabc">
+<meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
 <link crossorigin=anonymous href=/assets/css/stylesheet.f2c491fce8afa534511b126489022586d3e16bd60074f513e4d5393675d21445.css integrity="sha256-8sSR/OivpTRRGxJkiQIlhtPha9YAdPUT5NU5NnXSFEU=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
