--- a/series/programming-kubernetes/kube-client/index.html
+++ b/series/programming-kubernetes/kube-client/index.html
@@ -12,9 +12,7 @@ Clientset  获取 *kubernetes.Clientset
 可以通过该客户端实例获取内置的以及自定义的 K8s API 资源。  package main import &#34;k8s.io/client-go/rest&#34; func RESTClient(config *rest.Config) *rest.RESTClient { client, err := rest.RESTClientFor(config) if err != nil { panic(err) } return client } DiscoveryClient DiscoveryClient 动态客户端，通过动态指定 GVR 来操作任意的 Kubernetes 资源（内置资源 + CR）">
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://blog.srcio.cn/series/programming-kubernetes/kube-client/>
-<meta name=google-site-verification content="XYZabc">
-<meta name=yandex-verification content="XYZabc">
-<meta name=msvalidate.01 content="XYZabc">
+<meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
 <link crossorigin=anonymous href=/assets/css/stylesheet.f2c491fce8afa534511b126489022586d3e16bd60074f513e4d5393675d21445.css integrity="sha256-8sSR/OivpTRRGxJkiQIlhtPha9YAdPUT5NU5NnXSFEU=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
