--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
-<title>博客</title>
-<meta name=keywords content="丁鹏的博客,srcio,Kubernetes,Golang,云原生">
+<title>博客 · 丁鹏</title>
+<meta name=keywords content="丁鹏,丁鹏的博客,dingpeng,dp,srcio,srcio.cn,Kubernetes,Golang,云原生">
 <meta name=description content="博客 · 丁鹏">
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://blog.srcio.cn/>
@@ -25,15 +25,15 @@
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
 </noscript><style>@media screen and (min-width:769px){.post-content input[type=checkbox]:checked~label>img{transform:scale(1.6);cursor:zoom-out;position:relative;z-index:999}.post-content img.zoomCheck{transition:transform .15s ease;z-index:999;cursor:zoom-in}}</style>
-<script type=application/javascript>var doNotTrack=!1;doNotTrack||(function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b,a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)},a[b].l=1*new Date,c=e.createElement(f),d=e.getElementsByTagName(f)[0],c.async=1,c.src=g,d.parentNode.insertBefore(c,d)}(window,document,'script','https://www.google-analytics.com/analytics.js','ga'),ga('create','UA-123-45','auto'),ga('send','pageview'))</script><meta property="og:title" content="博客">
+<script type=application/javascript>var doNotTrack=!1;doNotTrack||(function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b,a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)},a[b].l=1*new Date,c=e.createElement(f),d=e.getElementsByTagName(f)[0],c.async=1,c.src=g,d.parentNode.insertBefore(c,d)}(window,document,'script','https://www.google-analytics.com/analytics.js','ga'),ga('create','UA-123-45','auto'),ga('send','pageview'))</script><meta property="og:title" content="博客 · 丁鹏">
 <meta property="og:description" content="博客 · 丁鹏">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://blog.srcio.cn/"><meta property="og:image" content="https://blog.srcio.cn/cover.png"><meta property="og:site_name" content="博客">
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://blog.srcio.cn/cover.png">
-<meta name=twitter:title content="博客">
+<meta name=twitter:title content="博客 · 丁鹏">
 <meta name=twitter:description content="博客 · 丁鹏">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"博客","url":"https://blog.srcio.cn/","description":"博客 · 丁鹏","thumbnailUrl":"https://blog.srcio.cn/images/blog.png","sameAs":["https://github.com/srcio","mailto:me@srcio.cn"]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"博客 · 丁鹏","url":"https://blog.srcio.cn/","description":"博客 · 丁鹏","thumbnailUrl":"https://blog.srcio.cn/images/blog.png","sameAs":["https://github.com/srcio","mailto:me@srcio.cn"]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
@@ -434,7 +434,7 @@ GVR
 <p>
 🔥
 <span>2016 - 2022
-<a href=https://blog.srcio.cn/>博客 · 丁鹏</a>
+<a href=https://blog.srcio.cn/>博客 · 丁鹏 · 丁鹏</a>
 </span>
 &nbsp;|&nbsp;
 <span>
