--- a/series/programming-go/index.html
+++ b/series/programming-go/index.html
@@ -4,9 +4,9 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
-<title>Golang 编程 | 博客</title>
+<title>Golang 编程 | 博客 · 丁鹏</title>
 <meta name=keywords content>
-<meta name=description content="Golang 编程 - 博客">
+<meta name=description content="Golang 编程 - 博客 · 丁鹏">
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://blog.srcio.cn/series/programming-go/>
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
@@ -221,7 +221,7 @@ cd .. mkdir service-a cd service-a go mod init github.com/srcio/service-a 因为
 <p>
 🔥
 <span>2016 - 2022
-<a href=https://blog.srcio.cn/>博客 · 丁鹏</a>
+<a href=https://blog.srcio.cn/>博客 · 丁鹏 · 丁鹏</a>
 </span>
 &nbsp;|&nbsp;
 <span>
