--- a/search/index.html
+++ b/search/index.html
@@ -9,6 +9,7 @@
 <meta name=description content="search">
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://blog.srcio.cn/search/>
+<meta name=baidu-site-verification content="code-UKq1Ugo12Q">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
 <link crossorigin=anonymous href=/assets/css/stylesheet.e0df13915129c488d0978b527f4f809123449e0ce5f5a2ffe5cdd725b241ba96.css integrity="sha256-4N8TkVEpxIjQl4tSf0+AkSNEngzl9aL/5c3XJbJBupY=" rel="preload stylesheet" as=style><link crossorigin=anonymous rel=preload as=fetch href=../index.json>
 <script defer crossorigin=anonymous src=/assets/js/search.113466315efbfa36b509890a2b12a73983a4a8b56c2a8f5573bec5a7200948a1.js integrity="sha256-ETRmMV77+ja1CYkKKxKnOYOkqLVsKo9Vc77FpyAJSKE="></script>
