--- a/series/programming-go/gen-cert/index.html
+++ b/series/programming-go/gen-cert/index.html
@@ -9,7 +9,7 @@
 <meta name=description content="代码实现 package certutil import ( &#34;bytes&#34; &#34;crypto/rand&#34; &#34;crypto/rsa&#34; &#34;crypto/x509&#34; &#34;crypto/x509/pkix&#34; &#34;encoding/pem&#34; &#34;math/big&#34; &#34;net&#34; &#34;time&#34; ) // CA ca type CA struct { caInfo *x509.Certificate caPrivKey *rsa.PrivateKey caPem, caKeyPem []byte } // GetCAPem get ca pem bytes func (c *CA) GetCAPem() ([]byte, error) { if c.caPem == nil { // create the CA 	caBytes, err := x509.CreateCertificate(rand.Reader, c.caInfo, c.caInfo, &c.caPrivKey.PublicKey, c.caPrivKey) if err != nil { return nil, err } // pem encode 	caPEM := new(bytes.">
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://srcio.cn/series/programming-go/gen-cert/>
-<meta name=baidu-site-verification content="code-UKq1Ugo12Q">
+<meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
 <link crossorigin=anonymous href=/assets/css/stylesheet.e0df13915129c488d0978b527f4f809123449e0ce5f5a2ffe5cdd725b241ba96.css integrity="sha256-4N8TkVEpxIjQl4tSf0+AkSNEngzl9aL/5c3XJbJBupY=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
