--- a/series/programming-go/go-work/index.html
+++ b/series/programming-go/go-work/index.html
@@ -15,7 +15,7 @@ mkdir greeting vim greeting/hello.go package greeting import &#34;fmt&#34; func 
 cd .. mkdir service-a cd service-a go mod init github.com/srcio/service-a 因为 service-a 需要依赖本地开发的 service-b 类库，所以我们需要在 go.mod 中引入 service-a ：">
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://srcio.cn/series/programming-go/go-work/>
-<meta name=baidu-site-verification content="code-UKq1Ugo12Q">
+<meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
 <link crossorigin=anonymous href=/assets/css/stylesheet.e0df13915129c488d0978b527f4f809123449e0ce5f5a2ffe5cdd725b241ba96.css integrity="sha256-4N8TkVEpxIjQl4tSf0+AkSNEngzl9aL/5c3XJbJBupY=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
