deploy: 6fd895fa838d603daa8b83cb68d2f1d5bc4e644f

--- a/series/programming-go/slice-append/index.html
+++ b/series/programming-go/slice-append/index.html
@@ -163,7 +163,7 @@ Golang 切片扩容
 <p>
 🔥
 <span>2016 - 2022
-<a href=https://srcio.cn/>博客 · 丁鹏 · 丁鹏</a>
+<a href=https://srcio.cn/>博客 · 丁鹏</a>
 </span>
 &nbsp;|&nbsp;
 <span>
