--- a/series/programming-kubernetes/operator/index.html
+++ b/series/programming-kubernetes/operator/index.html
@@ -148,7 +148,7 @@ Kuberentes Operator
 <p>
 🔥
 <span>2016 - 2022
-<a href=https://srcio.cn/>博客 · 丁鹏 · 丁鹏</a>
+<a href=https://srcio.cn/>博客 · 丁鹏</a>
 </span>
 &nbsp;|&nbsp;
 <span>
