--- a/series/programming-kubernetes/rest-config/index.html
+++ b/series/programming-kubernetes/rest-config/index.html
@@ -292,7 +292,7 @@ package main import ( &#34;k8s.io/client-go/rest&#34; &#34;k8s.io/client-go/tool
 <p>
 🔥
 <span>2016 - 2022
-<a href=https://srcio.cn/>博客 · 丁鹏 · 丁鹏</a>
+<a href=https://srcio.cn/>博客 · 丁鹏</a>
 </span>
 &nbsp;|&nbsp;
 <span>
