--- a/series/programming-go/gen-cert/index.html
+++ b/series/programming-go/gen-cert/index.html
@@ -337,7 +337,7 @@ Golang 生成证书
 <p>
 🔥
 <span>2016 - 2022
-<a href=https://srcio.cn/>博客 · 丁鹏 · 丁鹏</a>
+<a href=https://srcio.cn/>博客 · 丁鹏</a>
 </span>
 &nbsp;|&nbsp;
 <span>
