--- a/series/programming-go/go-work/index.html
+++ b/series/programming-go/go-work/index.html
@@ -235,7 +235,7 @@ go work use service-d
 <p>
 🔥
 <span>2016 - 2022
-<a href=https://srcio.cn/>博客 · 丁鹏 · 丁鹏</a>
+<a href=https://srcio.cn/>博客 · 丁鹏</a>
 </span>
 &nbsp;|&nbsp;
 <span>
