--- a/series/programming-kubernetes/crd/index.html
+++ b/series/programming-kubernetes/crd/index.html
@@ -209,7 +209,7 @@ CRD 简介
 <p>
 🔥
 <span>2016 - 2022
-<a href=https://srcio.cn/>博客 · 丁鹏 · 丁鹏</a>
+<a href=https://srcio.cn/>博客 · 丁鹏</a>
 </span>
 &nbsp;|&nbsp;
 <span>
