deploy: 85a8dd3a3087503c632c2f4034c8f64be01e328b

--- a/series/programming-go/gen-cert/index.html
+++ b/series/programming-go/gen-cert/index.html
@@ -304,9 +304,9 @@ Golang 生成证书
 <li><a href=https://srcio.cn/tags/golang/><i class="fa-solid fa-tag"></i>&nbsp;Golang</a></li>
 </ul>
 <nav class=paginav>
-<a class=prev href=https://srcio.cn/posts/kubelet-recycle-policy/>
+<a class=prev href=https://srcio.cn/posts/docker-compose/>
 <strong class=title><i class="fa-solid fa-backward"></i>&nbsp;上一页</strong>
-<br>Kubelet 垃圾回收原理剖析</a>
+<br>Docker Compose 实践</a>
 <a class=next href=https://srcio.cn/series/programming-go/mtls/>
 <strong class=title>下一页&nbsp;<i class="fa-solid fa-forward"></i></strong>
 <br>Golang 实现双向认证</a>
