--- a/series/programming-go/go-work/index.html
+++ b/series/programming-go/go-work/index.html
@@ -216,9 +216,9 @@ go work use service-d
 <a class=prev href=https://srcio.cn/series/programming-kubernetes/rest-config/>
 <strong class=title><i class="fa-solid fa-backward"></i>&nbsp;上一页</strong>
 <br>构造 rest.Config 实例</a>
-<a class=next href=https://srcio.cn/series/programming-kubernetes/kube-client/>
+<a class=next href=https://srcio.cn/posts/use-giscus/>
 <strong class=title>下一页&nbsp;<i class="fa-solid fa-forward"></i></strong>
-<br>构造 Kubernetes 客户端实例</a>
+<br>使用 Giscus 作为博客评论系统</a>
 </nav>
 </footer>
 <div class=giscus_comments><script src=https://giscus.app/client.js data-repo=srcio/blog data-repo-id=R_kgDOIFWX7A data-category=General data-category-id=DIC_kwDOIFWX7M4CRrSg data-mapping=pathname data-strict=0 data-reactions-enabled=1 data-emit-metadata=0 data-input-position=top data-theme=light data-lang=zh-CN crossorigin=anonymous async></script>
