--- a/series/programming-kubernetes/kube-client/index.html
+++ b/series/programming-kubernetes/kube-client/index.html
@@ -273,9 +273,9 @@ Clientset  获取 *kubernetes.Clientset
 <li><a href=https://srcio.cn/tags/kubernetes/><i class="fa-solid fa-tag"></i>&nbsp;Kubernetes</a></li>
 </ul>
 <nav class=paginav>
-<a class=prev href=https://srcio.cn/series/programming-go/go-work/>
+<a class=prev href=https://srcio.cn/posts/use-giscus/>
 <strong class=title><i class="fa-solid fa-backward"></i>&nbsp;上一页</strong>
-<br>Go1.18 - 工作区模式</a>
+<br>使用 Giscus 作为博客评论系统</a>
 <a class=next href=https://srcio.cn/series/programming-kubernetes/api-design/>
 <strong class=title>下一页&nbsp;<i class="fa-solid fa-forward"></i></strong>
 <br>Kubernetes API 设计</a>
