--- a/series/programming-kubernetes/crd/index.html
+++ b/series/programming-kubernetes/crd/index.html
@@ -190,6 +190,9 @@ CRD 简介
 <li><a href=https://srcio.cn/tags/crd/><i class="fa-solid fa-tag"></i>&nbsp;crd</a></li>
 </ul>
 <nav class=paginav>
+<a class=prev href=https://srcio.cn/posts/kubelet-recycle-policy/>
+<strong class=title><i class="fa-solid fa-backward"></i>&nbsp;上一页</strong>
+<br>Kubelet 垃圾回收原理剖析</a>
 <a class=next href=https://srcio.cn/series/programming-go/slice-append/>
 <strong class=title>下一页&nbsp;<i class="fa-solid fa-forward"></i></strong>
 <br>Golang 切片扩容</a>
