--- a/series/programming-go/slice-append/index.html
+++ b/series/programming-go/slice-append/index.html
@@ -12,7 +12,7 @@
 <link rel=canonical href=https://srcio.cn/series/programming-go/slice-append/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.774e4b7c3cf2eb92d93d0d93d39dc866f088532d03b010e23452d2dc0558bab3.css integrity="sha256-d05LfDzy65LZPQ2T053IZvCIUy0DsBDiNFLS3AVYurM=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.da53450bd98e0263c39b02bc198d8b16f6c311038c0e7d51eb5975031919c346.css integrity="sha256-2lNFC9mOAmPDmwK8GY2LFvbDEQOMDn1R61l1AxkZw0Y=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
@@ -99,7 +99,7 @@
 <a href=https://srcio.cn/series/><i class="fa-solid fa-angle-right"></i>&nbsp;系列</a>
 <a href=https://srcio.cn/series/programming-go/><i class="fa-solid fa-angle-right"></i>&nbsp;Golang 编程</a>&nbsp;<span><i class="fa-solid fa-angle-right"></i>&nbsp;Golang 切片扩容</span></p>
 </div>
-<h1 class=post-title>
+<h1 id=post-title class=post-title>
 Golang 切片扩容
 </h1>
 <div class=post-meta><span class=meta-item>
