--- a/series/programming-kubernetes/rest-config/index.html
+++ b/series/programming-kubernetes/rest-config/index.html
@@ -17,7 +17,7 @@ package main import ( &#34;k8s.io/client-go/rest&#34; &#34;k8s.io/client-go/tool
 <link rel=canonical href=https://srcio.cn/series/programming-kubernetes/rest-config/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.774e4b7c3cf2eb92d93d0d93d39dc866f088532d03b010e23452d2dc0558bab3.css integrity="sha256-d05LfDzy65LZPQ2T053IZvCIUy0DsBDiNFLS3AVYurM=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.da53450bd98e0263c39b02bc198d8b16f6c311038c0e7d51eb5975031919c346.css integrity="sha256-2lNFC9mOAmPDmwK8GY2LFvbDEQOMDn1R61l1AxkZw0Y=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
@@ -114,7 +114,7 @@ package main import ( &#34;k8s.io/client-go/rest&#34; &#34;k8s.io/client-go/tool
 <a href=https://srcio.cn/series/><i class="fa-solid fa-angle-right"></i>&nbsp;系列</a>
 <a href=https://srcio.cn/series/programming-kubernetes/><i class="fa-solid fa-angle-right"></i>&nbsp;Kubernetes 编程</a>&nbsp;<span><i class="fa-solid fa-angle-right"></i>&nbsp;构造 rest.Config 实例</span></p>
 </div>
-<h1 class=post-title>
+<h1 id=post-title class=post-title>
 构造 rest.Config 实例
 </h1>
 <div class=post-meta><span class=meta-item>
@@ -267,16 +267,16 @@ package main import ( &#34;k8s.io/client-go/rest&#34; &#34;k8s.io/client-go/tool
 </div>
 <div class=post-right-toc><div class=toc>
 <div open>
-<p class=toc-title><i class="fa-solid fa-bookmark"></i>&nbsp; 目录</p>
+<p class=toc-title><i class="fa-solid fa-bookmark"></i><a href=#post-title>&nbsp; 目录</a></p>
 <div class=inner><ul>
 <li>
-<a href=#%e9%80%9a%e8%bf%87-kubeconfig-%e6%96%87%e4%bb%b6%e6%9e%84%e9%80%a0 aria-label="通过 kubeconfig 文件构造" class=none>通过 kubeconfig 文件构造</a></li>
+<a href=#%e9%80%9a%e8%bf%87-kubeconfig-%e6%96%87%e4%bb%b6%e6%9e%84%e9%80%a0 aria-label="通过 kubeconfig 文件构造">通过 kubeconfig 文件构造</a></li>
 <li>
-<a href=#%e9%80%9a%e8%bf%87-secret-%e8%b5%84%e6%ba%90%e6%9e%84%e9%80%a0 aria-label="通过 Secret 资源构造" class=none>通过 Secret 资源构造</a></li>
+<a href=#%e9%80%9a%e8%bf%87-secret-%e8%b5%84%e6%ba%90%e6%9e%84%e9%80%a0 aria-label="通过 Secret 资源构造">通过 Secret 资源构造</a></li>
 <li>
-<a href=#%e9%80%9a%e8%bf%87-controller-runtime-%e5%bf%ab%e9%80%9f%e8%8e%b7%e5%8f%96 aria-label="通过 controller-runtime 快速获取" class=none>通过 controller-runtime 快速获取</a></li>
+<a href=#%e9%80%9a%e8%bf%87-controller-runtime-%e5%bf%ab%e9%80%9f%e8%8e%b7%e5%8f%96 aria-label="通过 controller-runtime 快速获取">通过 controller-runtime 快速获取</a></li>
 <li>
-<a href=#%e9%80%9a%e8%bf%87%e6%96%87%e6%9c%ac%e6%9e%84%e9%80%a0 aria-label=通过文本构造 class=none>通过文本构造</a>
+<a href=#%e9%80%9a%e8%bf%87%e6%96%87%e6%9c%ac%e6%9e%84%e9%80%a0 aria-label=通过文本构造>通过文本构造</a>
 </li>
 </ul>
 </div>
