deploy: 6f6d6195fa3c7e2257c38ddf86db62f8d4fcd2c4

--- a/series/programming-kubernetes/kube-client/index.html
+++ b/series/programming-kubernetes/kube-client/index.html
@@ -14,7 +14,7 @@ Clientset  获取 *kubernetes.Clientset
 <link rel=canonical href=https://srcio.cn/series/programming-kubernetes/kube-client/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.ff3befd9b2b53e254e44e313f1c24800c435c619ac27c35edac8c21eea3560e1.css integrity="sha256-/zvv2bK1PiVOROMT8cJIAMQ1xhmsJ8Ne2sjCHuo1YOE=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.8d66a0f10892977540fe89e072a17e78812f4f0e1c942295458d63f8984d5e21.css integrity="sha256-jWag8QiSl3VA/ongcqF+eIEvTw4clCKVRY1j+JhNXiE=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
@@ -287,7 +287,7 @@ Clientset  获取 *kubernetes.Clientset
 </div>
 <div class=post-right-toc><div class=toc>
 <div open>
-<p class=toc-title><i class="fa-solid fa-bookmark"></i><a href=#post-title>&nbsp; 目录</a></p>
+<p class=toc-title><a href=#post-title><i class="fa-regular fa-bookmark"></i>&nbsp; 标题</a></p>
 <div class=inner><ul>
 <li>
 <a href=#clientset aria-label=Clientset>Clientset</a></li>
