--- a/series/programming-kubernetes/rest-config/index.html
+++ b/series/programming-kubernetes/rest-config/index.html
@@ -17,7 +17,7 @@ package main import ( &#34;k8s.io/client-go/rest&#34; &#34;k8s.io/client-go/tool
 <link rel=canonical href=https://srcio.cn/series/programming-kubernetes/rest-config/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.ff3befd9b2b53e254e44e313f1c24800c435c619ac27c35edac8c21eea3560e1.css integrity="sha256-/zvv2bK1PiVOROMT8cJIAMQ1xhmsJ8Ne2sjCHuo1YOE=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.8d66a0f10892977540fe89e072a17e78812f4f0e1c942295458d63f8984d5e21.css integrity="sha256-jWag8QiSl3VA/ongcqF+eIEvTw4clCKVRY1j+JhNXiE=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
@@ -267,7 +267,7 @@ package main import ( &#34;k8s.io/client-go/rest&#34; &#34;k8s.io/client-go/tool
 </div>
 <div class=post-right-toc><div class=toc>
 <div open>
-<p class=toc-title><i class="fa-solid fa-bookmark"></i><a href=#post-title>&nbsp; 目录</a></p>
+<p class=toc-title><a href=#post-title><i class="fa-regular fa-bookmark"></i>&nbsp; 标题</a></p>
 <div class=inner><ul>
 <li>
 <a href=#%e9%80%9a%e8%bf%87-kubeconfig-%e6%96%87%e4%bb%b6%e6%9e%84%e9%80%a0 aria-label="通过 kubeconfig 文件构造">通过 kubeconfig 文件构造</a></li>
